--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -60,6 +60,16 @@ pages = {279--285},
 title = {{Measuring the Adoption of DDoS Protection Services}},
 year = {2016}
 }
+@article{Mansfield-Devine2015,
+abstract = {Distributed Denial of Service (DDoS) attacks show no signs of going away. In fact, they are finding popularity with new groups of users and moving away from the low-grade extortion carried out by small groups of cyber-criminals to being deployed as political weapons and even, it would appear, by individuals bearing grudges. And when they are exploited for the original purpose - of blackmail - DDoS attacks are becoming more complex and sophisticated.},
+author = {Mansfield-Devine, Steve},
+journal = {Network Security},
+number = {10},
+pages = {13--20},
+title = {{The growth and evolution of DDoS}},
+volume = {2015},
+year = {2015}
+}
 @article{Kim2018,
 abstract = {Excavations at Liang Bua, a large limestone cave on the island of Flores in eastern Indonesia, have yielded evidence for a popu- lation of tiny hominins, sufficiently distinct anatomically to be assigned to a new species, Homo floresiensis1 . The finds comprise the cranial and some post-cranial remains of one individual, as well as a premolar from another individual in older deposits. Here we describe their context, implications and the remaining archaeological uncertainties. Dating by radiocarbon (14C), lumi- nescence, uranium-series and electron spin resonance (ESR) methods indicates that H. floresiensis existed from before 38,000 years ago (kyr) until at least 18 kyr. Associated deposits contain stone artefacts and animal remains, including Komodo dragon and an endemic, dwarfed species of Stegodon. H. floresiensis originated from an early dispersal of Homo erectus (including specimens referred to as Homo ergaster and Homo georgicus)1 that reached Flores, and then survived on this island refuge until relatively recently. It overlapped significantly in time with Homo sapiens in the region2,3 , but we do not know if or how the two species interacted.},
 author = {Kim, Hyun Woo and Jeong, Young Sik},
