--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -1,6 +1,8 @@
 \subsection{Distributed Denial of Service (DDoS)}
 \label{subsec:03_ddos}
 
+% TODO add an army of zombies
+
 % Introduction describing the base of such attacks
 A DDoS (Distributed Denial of Service) attack has become a popular way to cripple a server of an institution or a private person and has shown to be an immense threat to the Internet. However, how is it possible for attackers to execute such attacks? The current internet design has its purpose of moving packets from a source to a known destination. The network itself minimally forwards all packages at minimal cost and generally outsources the complexity, including security, transport reliability and quality of service to the sender and receiver of the transported packages. This concept has been called the \textbf{end-to-end paradigm}. As no intermediary entity will step in, a party (either sender or receiver) can damage its opposition by using different attack possibilities such as IP Spoofing or the aforementioned DDoS attacks \cite{Mirkovic2004}. By faking the source address in the header of a packet, the sender can hide its identity. This security issue is called IP Spoofing \cite{Cloudflare2019}. As described in \citet{Mirkovic2004} following security issues raise opportunities of attacks:
 \begin{itemize}
@@ -120,7 +122,9 @@ Another approach again uses smart contracts and therefore blockchain as a mean t
 % TODO conclusion of paper?
 
 \subsubsection{Blockchain Signaling System (BloSS)}
+% https://github.com/blockchain-signaling-system/bloss-core
+% https://github.com/savf/BloSS
 % \cite{Rodrigues2019}
 
-Similarly to \cite{Rodrigues2017a}, this paper deals with cooperative, multi-domain DDoS defense systems, but it presents a Blockchain Signaling System (BloSS) which is a somewhat technical approach of deploying hardware simplifying signals of DDoS attacks. Main components for a BloSS are smart contracts that describe how information has to be transferred between Autonomous Systems (AS) and decentralized applications that include parameters defining the interaction of AS. Additionally, a consortium based blockchain, differentiating from the public and private blockchains, serves as an intermediary level of confidence. An Autonomous System (AS) thereby creates a wallet and notifies a smart contract that stores some information. The smart contract then implements a method to reclaim addresses published by other systems by querying a central smart contract. This central SC is used to configure all involved smart contracts with updated information on their managed IP networks, as the addresses of the involved wallets are immutable. In order to prevent free-riding peers (parties that only consume without any contribution), an incentive mechanism need to be set by defining tokens.  % TODO what do they do?
+Similarly to \cite{Rodrigues2017a}, this paper deals with cooperative, multi-domain DDoS defense systems, but it presents a Blockchain Signaling System (BloSS) which is a somewhat technical approach of deploying hardware simplifying signals of DDoS attacks. Principal components for a BloSS are smart contracts that describe how information has to be transferred between Autonomous Systems (AS) and decentralized applications that include parameters defining the interaction of AS. Additionally, a consortium based blockchain, differentiating from the public and private blockchains, serves as an intermediary level of confidence. An Autonomous System (AS) thereby creates a wallet and notifies a smart contract that stores some information. The smart contract then implements a method to reclaim addresses published by other systems by querying a central smart contract. This central SC is used to configure all involved smart contracts with updated information on their managed IP networks, as the addresses of the involved wallets are immutable. In order to prevent free-riding peers (parties that only consume without any contribution), an incentive mechanism need to be set by defining tokens.  % TODO what do they do?
 %  TODO more about Architecture and Hardware?
